--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <img src="./img/logo.svg" alt="logo" class="logo" />
+        <a href="/index.html">
+          <img src="./img/logo.svg" alt="logo" class="logo" />
+        </a>
         <nav class="main-nav">
           <ul class="list">
             <li class="item">
@@ -122,7 +124,7 @@
         <!-- /.calculator -->
       </main>
     </div>
-    <div class="wrapper2">
+    <div>
       <section class="features">
         <div class="feature safety">
           <img
@@ -296,7 +298,7 @@
             <p class="feedback-text">
               Киви переправил деньги не на кошелек а на номер мтс будьте
               внимательны.даже в этом случаи делают возврат и переводят на
-              приват.особая благодарность оператору Марии.
+              приват.
             </p>
             <h3 class="feedback-author">Jacob Robertson</h3>
             <p class="feedback-date">20.02.2020, 12:10</p>
@@ -321,11 +323,12 @@
             сервисе!
           </h2>
           <p class="proposition-subtitle">Начните обмен прямо сейчас</p>
-          <button class="proposition-button">Начать обмен</button>
         </div>
       </section>
       <!-- /.proposition -->
-
+      <div class="proposition-button-wrapper">
+        <button class="proposition-button">Начать обмен</button>
+      </div>
       <footer class="footer">
         <img src="img/logo.svg" alt="" class="footer-logo" />
         <nav class="footer-nav">
